# vulkan-renderer

./: .gitignore  Api.cpp  Api.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  DescriptorSet.cpp  DescriptorSet.hpp  Gfx.cpp  Gfx.h  Image.cpp  Image.hpp  Pipeline.cpp  Pipeline.hpp  RHI.cpp  RHI.h  RHI.hpp  RenderGraph.cpp  RenderGraph.hpp  Source.cpp  VulkanRenderer.sln  VulkanRenderer.vcxproj  VulkanRenderer.vcxproj.filters  main.cpp  vcpkg.json
Shaders/: cloud.frag.hlsl  cloud.frag.spv  common.fxh  compile_shader.bat  compile_shaders.bat  gbuffer.frag.hlsl  gbuffer.frag.spv  gbuffer.vert.hlsl  gbuffer.vert.spv  lighting.frag.hlsl  lighting.frag.spv  main.frag.hlsl  main.frag.spv  main.vert.hlsl  main.vert.spv  particle.comp.hlsl  particle.comp.spv  postproc.frag.hlsl  postproc.frag.spv  postproc.vert.hlsl  postproc.vert.spv  shadow.frag.hlsl  shadow.vert.hlsl  shadow.vert.spv
scripts/: setup.bat
